# googlemusic-foobar

./: .gitignore  .gitmodules  CMakeLists.txt
foo_gmusic/: CMakeLists.txt  GMusicInterface.cpp  GMusicInterface.h  InitQuit.cpp  MainDialog.cpp  MainDialog.h  Preferences.cpp  Preferences.h  ProcessLocationsNotify.cpp  ProcessLocationsNotify.h  SongInfo.h  SongsTable.cpp  SongsTable.h  disableWarnings.h  disablewarnings.h  foo_gmusic.rc  genDefs.h  gmusic.cpp  gmusic.h  initquit.cpp  input.cpp  input.h  main.cpp  maindialog.cpp  mainmenu.cpp  preferences.cpp  preferences.h  resource.h  songstable.h  utility.h
foobar_SDK/: CMakeLists.txt
foobar_SDK/foobar2000/: CMakeLists.txt
foobar_SDK/foobar2000/ATLHelpers/: CMakeLists.txt
foobar_SDK/foobar2000/foobar2000_component_client/: CMakeLists.txt
foobar_SDK/foobar2000/helpers/: CMakeLists.txt
foobar_SDK/foobar2000/shared/: CMakeLists.txt
googlemusic-foobar/: CMakeLists.txt
googlemusic-foobar/foo_gmusic/: CMakeLists.txt
googlemusic-foobar/foobar_SDK/: CMakeLists.txt
googlemusic-foobar/foobar_SDK/foobar2000/SDK/: CMakeLists.txt
googlemusic-foobar/foobar_SDK/pfc/: CMakeLists.txt
